spinbutton: don't apply insets to the spinbutton
It doesn't look nice, as the widget is composed by two separate
backgrounds.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -170,8 +170,11 @@
 /*****************
  * GtkSpinButton *
  *****************/
-.spinbutton {
+.spinbutton,
+.spinbutton:focused {
     padding: 3 2;
+
+    -adwaita-inset-top: none;
 }
 
 .spinbutton.button,
