progressbar: remove hack to draw the progressbar fill over the trough
It's not needed anymore now that things have been fixed in GTK+ proper.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -238,6 +238,11 @@ GtkProgressBar.trough,
                                      to (mix (@trough_bg_color_b, @theme_selected_bg_color, 0.25)));
 }
 
+GtkProgressBar,
+.trough row {
+    padding: 0;
+}
+
 /************
  * GtkScale *
  ************/
