--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -45,6 +45,7 @@
 @define-color progressbar_background_a alpha (@theme_fg_color, 0.70);
 @define-color progressbar_background_b alpha (@theme_fg_color, 0.45);
 @define-color progressbar_border alpha (@theme_fg_color, 0.60);
+@define-color progressbar_pattern #000000;
 
 @define-color focused_entry_border @theme_selected_bg_color;
 @define-color focused_entry_inset alpha (@theme_selected_bg_color, 0.50);
