--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -165,6 +165,8 @@
     border-width: 1;
     border-radius: 1;
     border-color: @progressbar_border;
+
+    -adwaita-progressbar-pattern: none;
 }
 
 /*****************
@@ -198,9 +200,16 @@ GtkProgressBar.progressbar {
 
     border-radius: 3;
     border-style: solid;
+    border-width: 1;
     border-color: @progressbar_border;
 
     -adwaita-inset-top: alpha (@theme_base_color, 0.20);
+    -adwaita-progressbar-pattern: -gtk-gradient (linear,
+                                                 left top, right bottom,
+                                                 from (alpha (@progressbar_pattern, 0.00)),
+                                                 color-stop (0.49, alpha (@progressbar_pattern, 0.00)),
+                                                 color-stop (0.50, alpha (@progressbar_pattern, 0.10)),
+                                                 to (alpha (@progressbar_pattern, 0.10)));
 }
 
 GtkProgressBar.trough {
@@ -310,7 +319,8 @@ GtkScale.progressbar {
     -adwaita-border-gradient: -gtk-gradient (linear,
                                              left top, left bottom,
                                              from (@scale_progress_border_a),
-                                             to (@scale_progress_border_b));    
+                                             to (@scale_progress_border_b));
+    -adwaita-progressbar-pattern: none;
 }
 
 GtkScale.mark {
@@ -830,6 +840,8 @@ GtkComboBox .button:prelight {
     border-width: 0;
     border-radius: 2;
     border-color: shade (@inactive_frame_color, 0.925);
+
+    -adwaita-progressbar-pattern: none;
 }
 
 /*******************
