--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -78,6 +78,7 @@
 @define-color progressbar_background_a #76b0ec;
 @define-color progressbar_background_b #1f72c6;
 @define-color progressbar_border #3277bf;
+@define-color progressbar_pattern #000000;
 
 @define-color internal_element_color #888a85;
 
