progressbar: make sure the text on primary toolbars is rendered black

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -841,6 +841,8 @@ GtkComboBox .button:prelight {
     border-radius: 2;
     border-color: shade (@inactive_frame_color, 0.925);
 
+    color: @theme_text_color;
+
     -adwaita-progressbar-pattern: none;
 }
 
