menus: Make sure all menu children use the menu colors
And not as previously, all children that are menus.

https://bugzilla.gnome.org/show_bug.cgi?id=650270

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -571,12 +571,13 @@ GtkComboBox .button:prelight {
  * Menus *
  *********/
 
-* .menu {
+.menu * {
     background-color: @menu_bg_color;
     color: @menu_fg_color;
 }
 
 .menu {
+    background-color: @menu_bg_color;
     border-style: solid;
     border-width: 0;
     border-radius: 0;
