menus: Use correct classes for menuitems
.menu.check doesn't describe checks of menuitems, but checks of menus.

https://bugzilla.gnome.org/show_bug.cgi?id=650270

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -655,7 +655,7 @@ GtkComboBox .button:prelight {
     border-color: darker (@theme_selected_bg_color);
 }
 
-.menu .separator {
+.menuitem.separator {
     border-color: @inactive_frame_color;
 
     -GtkSeparatorMenuItem-horizontal-padding: 0;
@@ -663,19 +663,19 @@ GtkComboBox .button:prelight {
 }
 
 /* menu radio and check items are drawn differently */
-.menu.check:active {
+.menuitem.check:active {
     color: @menu_controls_color;
 }
 
-.menu.radio:active {
+.menuitem.radio:active {
     color: @menu_controls_color;
 }
 
-.menu.check:prelight {
+.menuitem.check:prelight {
     color: @theme_selected_fg_color;
 }
 
-.menu.radio:prelight {
+.menuitem.radio:prelight {
     color: @theme_selected_fg_color;
 }
 
