menus: Add hack to properly render prelit menubar labels
https://bugzilla.gnome.org/show_bug.cgi?id=650270

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -619,6 +619,11 @@ GtkComboBox .button:prelight {
     border-color: @inactive_frame_color;
 }
 
+/* XXX: Needs fixage in GTK to inherit properly */
+.menubar .menuitem *:prelight {
+    color: @menu_fg_color;
+}
+
 .menuitem:insensitive {
     /* there is some weird alpha precomposing issues with this - ghosts on dark background */
     color: mix (@menu_fg_color, @menu_bg_color, 0.8);
