adwaita: move general color definitions to GtkWindow
So that inherit could work properly by getting that as a fallback. By
keeping it in * {}, it would always trigger an exact match for any
widget, so it would have a higher priority of an inherited value.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -39,10 +39,6 @@
     -GtkEntry-inner-border: 2;
     -GtkEntry-progress-border: 0;
 
-    /* Style */
-    background-color: @theme_bg_color;
-    color: @theme_fg_color;
-
     -GtkWidget-focus-padding: 2;
     -GtkWidget-focus-line-width: 1;
     -adwaita-focus-border-color: alpha (@theme_text_color, 0.4);
@@ -55,6 +51,12 @@
     -adwaita-inset-right: none;
     -adwaita-inset-top: none;
     -adwaita-inset-bottom: none;
+}
+
+GtkWindow {
+    /* Style */
+    background-color: @theme_bg_color;
+    color: @theme_fg_color;
 }
 
 /***************
