--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -492,9 +492,6 @@ GtkComboBox {
 
 GtkComboBox .button {
     padding: 1;
-}
-
-GtkComboBox .button * {
     color: @internal_element_color;
 }
 
@@ -603,7 +600,6 @@ GtkComboBox .button *:prelight {
     border-width: 0;
     border-style: none;
     padding: 4;
-    color: @theme_text_color;
 
     -GtkWidget-window-dragging: true;
     -GtkMenuBar-internal-padding: 0;
@@ -619,12 +615,12 @@ GtkComboBox .button *:prelight {
 .menubar .menuitem:prelight {
     background-image: none;
     background-color: @menu_bg_color;
-    color: @menu_fg_color;
 
-    border-style: solid;
     border-radius: 5;
-    border-width: 0;
-    border-color: @inactive_frame_color;
+}
+
+.menubar .menuitem *:prelight {
+    color: @menu_fg_color;
 }
 
 .menuitem {
@@ -633,11 +629,15 @@ GtkComboBox .button *:prelight {
     padding: 4;
 }
 
-/* XXX: Needs fixage in GTK to inherit properly */
+.menuitem:active,
+.menuitem *:active,
+.menuitem:prelight,
 .menuitem *:prelight {
-    color: @menu_fg_color;
+    background-color: @theme_selected_bg_color;
+    color: @theme_selected_fg_color;
 }
 
+.menuitem:insensitive,
 .menuitem *:insensitive {
     /* there is some weird alpha precomposing issues with this - ghosts on dark background */
     color: mix (@menu_fg_color, @menu_bg_color, 0.8);
@@ -651,16 +651,6 @@ GtkComboBox .button *:prelight {
 .menuitem .accelerator:prelight,
 .menuitem .accelerator:active {
     color: alpha (@menu_fg_color, 0.3);
-}
-
-.menuitem:active,
-.menuitem:prelight {
-    background-color: @theme_selected_bg_color;
-    color: @theme_selected_fg_color;
-    border-style: solid;
-    border-width: 0;
-    border-radius: 0;
-    border-color: darker (@theme_selected_bg_color);
 }
 
 .menuitem.separator {
