style assistant sidebar highlights
To be bold instead of the default highlight color.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1164,6 +1164,12 @@ GtkCalendar.highlight {
     background-color: shade (@theme_bg_color, 0.99);
 }
 
+.sidebar .highlight
+{
+    color: @theme_fg_color;
+    font: bold;
+}
+
 ApDocView, /* Abiword */
 EogScrollView, /* Eog */
 CheeseThumbView /* Cheese */
