--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -956,10 +956,25 @@ GtkTreeMenu .menuitem * {
     background-color: shade (@theme_bg_color, 1.02);
 }
 
-.sidebar .highlight
-{
+/****************
+ * GtkAssistant *
+ ****************/
+GtkAssistant .sidebar .highlight {
     color: @theme_fg_color;
     font: bold;
+}
+
+GtkAssistant .sidebar {
+    padding: 12;
+
+    border-width: 1;
+    border-radius: 2;
+    border-style: solid;
+    border-color: @inactive_frame_color;
+
+    color: mix (@theme_fg_color, @theme_bg_color, 0.40);
+
+    background-color: shade (@theme_bg_color, 0.97);
 }
 
 /*************
