frame: re-add border-width: 0
It got lost in the cleanup.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -355,6 +355,7 @@ GtkScale.mark {
  **********/
 .frame {
     padding: 2;
+    border-width: 0;
 }
 
 /* only render frames in a GtkScrolledWindow */
